prevent home backgroung img squishing in mobile

--- a/static/css/styles-home.css
+++ b/static/css/styles-home.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("/static/img/butterflies_and_shrooms.jpg");
-    background-size: 100% 100%;
+    background-size: cover;
     background-color: black;
     background-repeat: no-repeat;
     background-attachment: fixed;
